force-app/main/default/objects/Customer_Credit_Info__c/Customer_Credit_Info__c.object-meta.xml
<CustomObject>
    <label>Customer Credit Info</label>
    <nameField>
        <displayFormat>CCI-{000000}</displayFormat>
        <label>Customer Credit Info Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>