force-app/main/default/objects/Customer_Credit_Info__c/fields/Actual_Credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Actual_Credit_limit__c</fullName>
    <label>Customer Credit Line (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>