force-app/main/default/objects/Customer_Credit_Info__c/fields/Applied_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Credit_Date__c</fullName>
    <label>Applied Credit Date</label>
    <type>Date</type>
</CustomField>