force-app/main/default/objects/Customer_Credit_Info__c/fields/Check_Rule__c.field-meta.xml
<CustomField>
    <fullName>Check_Rule__c</fullName>
    <label>Check Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Check_Rule</valueSetName>
    </valueSet>
</CustomField>