force-app/main/default/objects/Customer_Credit_Info__c/fields/Credit_Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analysis_Date__c</fullName>
    <label>Credit Analysis Date</label>
    <type>Date</type>
</CustomField>