force-app/main/default/objects/Customer_Credit_Info__c/fields/Credit_Segment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Segment__c</fullName>
    <label>Credit Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Credit_Segement</valueSetName>
    </valueSet>
</CustomField>