force-app/main/default/objects/Customer_Credit_Info__c/fields/Guarantee_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_Expiration_Date__c</fullName>
    <label>Guarantee Expiration Date</label>
    <type>Date</type>
</CustomField>