force-app/main/default/objects/Customer_Credit_Info__c/fields/Local_Credit_Limit2__c.field-meta.xml
<CustomField>
    <fullName>Local_Credit_Limit2__c</fullName>
    <label>Local Credit Limit2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>