force-app/main/default/objects/Customer_Credit_Info__c/fields/Local_Credit_Line_USD__c.field-meta.xml
<CustomField>
    <fullName>Local_Credit_Line_USD__c</fullName>
    <label>Local Credit Line (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>