force-app/main/default/objects/Customer_Credit_Info__c/fields/Remaining_Credit__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Credit__c</fullName>
    <label>SAP Available Credit Limit (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>