force-app/main/default/objects/Customer_Credit_Info__c/fields/Rules__c.field-meta.xml
<CustomField>
    <fullName>Rules__c</fullName>
    <label>Rules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rules</valueSetName>
    </valueSet>
</CustomField>