force-app/main/default/objects/Customer_Credit_Info__c/fields/Sinosure_Compensation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sinosure_Compensation_Rate__c</fullName>
    <label>Sinosure Compensation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>