force-app/main/default/objects/Customer_Credit_Info__c/fields/Sinosure_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sinosure_Credit_Limit__c</fullName>
    <label>Sinosure Credit Line (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>