force-app/main/default/objects/Customer_Credit_Info__c/fields/Sinosure_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Sinosure_Expiration_Date__c</fullName>
    <label>Sinosure Expiration Date</label>
    <type>Date</type>
</CustomField>