force-app/main/default/objects/Customer_Credit_Info__c/fields/Sync_Failure_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Sync_Failure_Reasons__c</fullName>
    <label>Sync Failure Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>