force-app/main/default/objects/Customer_Credit_Info__c/fields/Type_of_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Guarantee__c</fullName>
    <label>Type of Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>