force-app/main/default/objects/Customer_Credit_Info__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <label>Customer Credit Line Expiration Date</label>
    <type>Date</type>
</CustomField>